--- a/smartlivestock/smartlivestock/Views/Shared/_LoginPartial.cshtml
+++ b/smartlivestock/smartlivestock/Views/Shared/_LoginPartial.cshtml
@@ -138,7 +138,7 @@
     }
 
     body {
-        background: linear-gradient( to left,#eef7c1,#8df7f2 );
+        background: powderblue;
     }
 
 </style>
