--- a/smartlivestock/smartlivestock/Views/Diagnoses/Index.cshtml
+++ b/smartlivestock/smartlivestock/Views/Diagnoses/Index.cshtml
@@ -26,7 +26,7 @@
     <div class="form-group">
 
 
-        <input type="search" id="searchInput" placeholder="Search your content.." value="@ViewData["category"]" name="category" style="width: 350px; " />
+        <input type="search"  placeholder="Search your content.." value="@ViewData["category"]" name="category" style="width: 350px; " />
 
 
         <input type="submit" value="Filter" class="btn btn-primary" />
